--- a/blocks/header/__lang-link/_decoration/header__lang-link_decoration_underlined.css
+++ b/blocks/header/__lang-link/_decoration/header__lang-link_decoration_underlined.css
@@ -1,3 +1,3 @@
-.header__lang-link_decoration_underlined:hover {
+.header__lang-link_decoration_underlined {
   border-bottom: 2px solid #ffffff;
 }
