--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  padding: 16px 16px 0;
   box-sizing: border-box;
+  width: 90%;
+  align-self: center;
+  border: 2px solid green;
 }
