--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,4 +1,6 @@
 .root {
+  display: flex;
+  flex-direction: column;
   min-width: 320px;
   background-color: #2A2C2F;
   color: #FFFFFF;
@@ -6,4 +8,5 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 1.6;
+  padding-top: 16px;
 }
