--- a/pages/index.css
+++ b/pages/index.css
@@ -33,3 +33,8 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list/_font-weight/intro__list_font-weight_400.css);
+
+/* photo-grid */
+
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
