--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,8 @@
 .photo-grid {
   width: 90%;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(min-content, max-content);
+  justify-content: center;
   list-style: none;
   padding: 64px 0 0 0;
   margin: 0;
