work in progress

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,10 +1,7 @@
 .header {
-  display: flex;
-  flex-direction: row;
+  grid-area: h;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(min-content, max-content));
   justify-content: space-between;
-  align-items: flex-end;
-  box-sizing: border-box;
-  width: 90%;
-  align-self: center;
-  border: 2px solid green;
+  justify-items: center;
 }
