--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,5 +1,13 @@
 .content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  grid-area: c;
+  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(24, 1fr);
+  grid-template-rows: repeat(5, minmax(min-content, max-content));
+  grid-template-areas:
+    'l l l l l l l l l l l l l l l l l l l l l l l l'  /* lead */
+    '. . i i i i i i i i i i i i i i i i i i i i . .'  /* intro */
+    'g g g g g g g g g g g g g g g g g g g g g g g g'  /* photo-grid */
+    '. . p p p p p p p p p p p p p p p p p p p p . .'  /* places */
+    'c c c c c c c c c c c c c c c c c c c c c c c c'; /* cover */
 }
