--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption {
-  margin: 8px 0 0 16px;
+  margin: 8px 0 0 0;
   text-transform: uppercase;
   font-size: 10px;
   line-height: 1.4;
