--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,7 @@
 .lead__subtitle {
   line-height: 1.2;
   text-align: center;
-  width: 90%;
-  margin: 0 0 40px 0;
+  max-width: 640px;
+  margin: 0 0 64px 0;
+  font-size: 30px;
 }
