--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,8 @@
 .lead__title {
   font-weight: 900;
-  font-size: 40px;
+  font-size: 96px;
   line-height: 1.1;
   text-align: center;
-  width: 90%;
-  margin: 0 0 16px 0;
+  margin: 0 0 32px 0;
+  max-width: 720px;
 }
