--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,8 +1,8 @@
 .lead {
+  grid-area: l;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding: 48px 0 0 0;
-  border: 2px solid yellow;
+  padding: 56px 0 0 0;
 }
