--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,7 +1,8 @@
 .photo-grid__item {
+  display: table;
+  width: auto;
   font-size: 0;
-  height: auto;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   border: 1px solid green;
 }
