--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,8 @@
 .lead__caption {
-  margin: 8px 0 0 0;
+  margin: 0;
   text-transform: uppercase;
   font-size: 10px;
   line-height: 1.4;
   letter-spacing: .15em;
+  width: 100%;
 }
