--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,8 +1,6 @@
 .photo-grid__item {
-  display: table;
-  width: auto;
   font-size: 0;
   margin: 0;
-  padding: 10px;
   border: 1px solid green;
+  max-width: 275px;
 }
