--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,15 +1,8 @@
 .root {
-  display: grid;
-  grid-template-columns: 16px minmax(288px, 1184px) 16px;
-  grid-template-rows: 16px repeat(3, minmax(min-content, max-content)) 16px;
-  grid-template-areas:
-    '. . .' /* air */
-    '. h .' /* header */
-    'c c c' /* content */
-    '. f .'  /* footer */
-    '. . .'; /* air */
-  justify-content: center;
-  align-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 320px;
   background-color: #2A2C2F;
   color: #FFFFFF;
   font-family: 'Inter', Arial, sans-serif;
@@ -21,4 +14,5 @@
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
+  box-sizing: border-box;
 }
