--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,10 @@
 
 @import url(../blocks/root/root.css);
 
+/* wrapper */
+
+@import url(../blocks/wrapper/wrapper.css);
+
 /* header */
 
 @import url(../blocks/header/header.css);
