--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,9 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 92px 0 0;
+  padding: 92px 0px 0;
   margin: 0;
   border: 1px solid red;
   width: 100%;
-  max-width: 984px;
+  max-width: 1016px;
+}
+
+@media screen and (max-width: 600px) {
+  .intro {
+    padding: 64px 0px 0;
+  }
 }
