--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,4 +5,25 @@
   width: 100%;
   margin: 0 0 64px 0;
   font-size: 30px;
+  border: 1px solid red;
+}
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    font-size: 26px;
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 667px) {
+  .lead__subtitle {
+    font-size: 20px;
+    max-width: 340px;
+  }
+}
+
+@media screen and (max-width: 466px) {
+  .lead__subtitle {
+    font-size: 16px;
+  }
 }
