--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,6 +1,7 @@
 .footer__links {
-  display: grid;
-  grid-template-columns: repeat(5, min-content);
+  display: flex;
+  flex-direction: row;
+  margin: 0 0 0 16px;
   padding: 0;
   list-style: none;
 }
