--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,3 +6,17 @@
   margin: 32px 0 0 0;
   color: #ffffff;
 }
+
+@media screen and (max-width: 624px) {
+  .cover__subtitle {
+    font-size: 16px;
+    margin: 16px 0 0 0;
+  }
+}
+
+@media screen and (max-width: 538px) {
+  .cover__subtitle {
+    font-size: 14px;
+    margin: 16px 0 0 0;
+  }
+}
