--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -10,3 +10,10 @@ transition: opacity .2s linear;
 .footer__link:hover {
   opacity: .7;
 }
+
+@media screen and (max-width: 647px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+  }
+}
