--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,3 +5,11 @@
   padding: 0;
   list-style: none;
 }
+
+@media screen and (max-width: 647px) {
+  .footer__links {
+    flex-direction: column;
+    gap: 32px;
+    margin: 0 0 48px 16px;
+  }
+}
