--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,22 @@
 .footer {
   width: 100%;
-  max-width: 1016px;
+  max-width: calc(1184px + 32px);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 92px 0 24px;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 88px 0 24px;
+  }
+}
+
+@media screen and (max-width: 647px) {
+  .footer {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 64px 0 24px;
+  }
 }
