--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,6 +2,12 @@
   margin-left: 24px;
   color: #ffffff;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 24px;
   line-height: 1.2;
+}
+
+@media screen and (max-width: 648px) {
+  .header__lang-link {
+    font-size: 18px;
+  }
 }
