--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  max-width: calc(1184px + 32px);
   justify-content: space-between;
-  border: 1px solid red;
   padding: 16px 16px 0;
   box-sizing: border-box;
 }
