--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,13 +4,18 @@
   align-items: flex-start;
   padding: 92px 0px 0;
   margin: 0;
-  border: 1px solid red;
   width: 100%;
   max-width: 1016px;
 }
 
+@media screen and (max-width: 768px) {
+  .intro {
+    padding: 88px 0 0;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .intro {
-    padding: 64px 0px 0;
+    padding: 64px 0 0;
   }
 }
