--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,12 +2,21 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  justify-items: center;
-  justify-content: center;
   list-style: none;
-  padding: 64px 0 0 0;
+  padding: 92px 16px 0;
   margin: 0;
   gap: 16px;
-  border: 1px solid green;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    padding: 88px 16px 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .photo-grid {
+    padding: 64px 16px 0;
+  }
 }
