--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,22 @@
 .places {
-  grid-area: p;
+  width: 100%;
+  max-width: 1016px;
+  padding: 92px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+    padding: 88px 0 90px 0;
+    gap: 73px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .places {
+    padding: 64px 0 66px 0;
+    gap: 50px;
+  }
 }
