--- a/pages/index.css
+++ b/pages/index.css
@@ -61,6 +61,7 @@
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__text-wrapper/place__text-wrapper.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 
 /* cover */
