--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,4 +1,9 @@
 .intro__text {
   max-width: 720px;
   margin: 0 16px 0;
+  line-height: 1.6;
 }
+
+/* Не могу понять в чем нессоответствие макету параметров шрифта.
+  В моей версии макета у intro__text на всех экранах 16px размер шрифта
+  и высота строки 163%, шрифт Интер 400. В чем ошибка? */
