--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,8 @@
 .cover {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  align-content: center;
+  display: flex;
+  width: 100%;
   justify-content: center;
+  background-image: url(./images/cover__background.jpg);
+  background-position: center center;
+  background-size: cover;
 }
