--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,8 +7,11 @@ opacity: 1;
 transition: opacity .2s linear;
 }
 
+/* Не понял комментарий: "Код должен быть написан единообразно с соблюдением стиля отступов."
+Что нужно сделать? */
+
 .footer__link:hover {
-  opacity: .7;
+  opacity: .8;
 }
 
 @media screen and (max-width: 647px) {
