--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,6 +4,12 @@
   text-decoration: none;
   font-size: 24px;
   line-height: 1.2;
+  opacity: 1;
+  transition: opacity .2s linear;
+}
+
+.header__lang-link:hover {
+  opacity: .8;
 }
 
 @media screen and (max-width: 648px) {
