--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,12 @@
 .intro__title {
   margin: 0 16px 40px;
-  font-size: 32px;
+  font-size: 54px;
   line-height: 1.1;
   font-weight: 900;
+}
+
+@media screen and (max-width: 768px) {
+  .intro__title {
+    font-size: 32px;
+  }
 }
