--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,10 +1,18 @@
 .place__paragraph {
+  font-size: 18px;
+  line-height: 1.6;
   margin: 0 0 26px 0;
   padding: 0 16px 0 0;
 }
 
+@media screen and (max-width: 769px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
+}
+
 @media screen and (max-width: 648px) {
   .place__paragraph {
-    padding: 0 16px 0;
+    padding: 0 16px 0; /* Тут добавился паддинг слева */
   }
 }
