--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -13,7 +13,7 @@
 }
 
 .cover__background:hover {
-  background-color: rgba(42, 44, 47, .8);;
+  background-color: rgba(42, 44, 47, .8);
 }
 
 @media screen and (max-width: 1025px) {
