--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,14 +1,13 @@
 .footer__link {
-font-size: 16px;
-color: #ffffff;
-text-decoration: none;
-margin: 0 18px 0 0;
-opacity: 1;
-transition: opacity .2s linear;
+  font-size: 16px;
+  color: #ffffff;
+  text-decoration: none;
+  margin: 0 18px 0 0;
+  opacity: 1;
+  transition: opacity .2s linear;
 }
 
-/* Не понял комментарий: "Код должен быть написан единообразно с соблюдением стиля отступов."
-Что нужно сделать? */
+/* Исправил форматирование. Спасибо */
 
 .footer__link:hover {
   opacity: .8;
